--- a/templates/default.html
+++ b/templates/default.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>mvr - $title$</title
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>mvr - $title$</title>
+
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  </head>
 <body>
 $body$
 </body>
