--- a/templates/default.html
+++ b/templates/default.html
@@ -5,6 +5,9 @@
     <title>mvr - $title$</title>
 
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+
+    <link rel="stylesheet" type="text/css" href="/css/base.css" />
+    <link rel="stylesheet" type="text/css" href="/css/theorem.css" />
   </head>
 <body>
 $body$
