--- a/templates/post.html
+++ b/templates/post.html
@@ -1,4 +1,9 @@
-<h1>$title$</h1>
-<i>$date$ / $tags$</i>
+<div class="entry">
+    <h2><a href="$url$">$title$</a></h2>
+    <div class="entryheader">
+        <a href="?">Posted on $date$</a> / $tags$<br>
+    </div>
+    $body$
 
-$body$
+    <div class="commentrequest">Please email me any comments!</div>
+</div>
