--- a/templates/default.html
+++ b/templates/default.html
@@ -6,12 +6,25 @@
 
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
-    <link rel="stylesheet" type="text/css" href="/css/base.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="/css/base.css" /> -->
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Source+Serif+Pro" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link rel="stylesheet" type="text/css" href="/css/theorem.css" />
   </head>
-<body>
-$body$
-</body>
+  $if(body-style-minimal)$
+  <body id="minimal">
+  $else$
+  <body>
+  $endif$
+      <div id="wrapper">
+          $body$
+
+          <div id="footer">
+              Site style stolen from <a href="https://www.umsu.de/wo/">Wolfgang Schwarz</a>
+          </div>
+      </div>
+
+  </body>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
