--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,21 +1,101 @@
+<h1><a href="/">Mitchell Riley</a></h1>
+
 <div id="header">
-    <a href="/">&#171;</a> $title$
+    <div id="headerl">
+
+        <!-- <img src="" width="200" height="140" alt="mvr"> -->
+
+        I am a PhD student at Wesleyan University in
+        Connecticut. I work on type theory, in particular <a href="">HoTT</a> and synthetic topology.
+
+    </div>
+
+    <div id="headerr">
+        <ul>
+            <li><a href="">Academic Website</a></li>
+            <li><a href="">Github</a></li>
+        </ul>
+        Contact:
+        <script type="text/javascript">
+         document.write(('<'+'a href="mailto:woyumsu.de">mitchell.v.rileyzgmail.com<'+'/a>').replace(/z/g, '@'));
+        </script>
+        <noscript>mitchell.v.riley at gmail</noscript>
+    </div>
+
+</div>
+<div id="main">
+    $if(isIndex)$
+    $else$
+    <table class='prevnext'>
+        <tr>
+
+            <td>
+                $if(nextPageNum)$
+                <a href='$nextPageUrl$'>&lt; Older Entries</a>
+                $else$
+                &nbsp;
+                $endif$
+            </td>
+
+            <!-- <td align='center'><a href='/'>Home</a></td> -->
+
+            <td align='right'>
+                $if(previousPageNum)$
+                <a href='$previousPageUrl$'>Newer Entries &gt;</a>
+                $else$
+                &nbsp;
+                $endif$
+            </td>
+
+        </tr>
+    </table>
+    $endif$
+
+    $for(posts)$
+    <div class="entry">
+        <h2><a href="$url$">$title$</a></h2>
+        <div class="entryheader">
+            <a href="?">Posted on $date$</a> / $tags$<br>
+        </div>
+        $if(teaser)$
+        $teaser$
+        <div class="continue"><a href="$url$">Read full entry</a></div>
+        $else$
+        $body$
+        $endif$
+    </div>
+
+    $endfor$
+
+    <table class='prevnext'>
+        <tr>
+
+            <td>
+                $if(nextPageNum)$
+                <a href='$nextPageUrl$'>&lt; Older Entries</a>
+                $else$
+                &nbsp;
+                $endif$
+            </td>
+
+            <!-- <td align='center'><a href='/'>Home</a></td> -->
+
+            <td align='right'>
+                $if(previousPageNum)$
+                <a href='$previousPageUrl$'>Newer Entries &gt;</a>
+                $else$
+                &nbsp;
+                $endif$
+            </td>
+
+        </tr>
+    </table>
 </div>
 
-<div id="main">
+<div id="side1" class="side">
+    <div class="section">
+        <h3>Tags</h3>
 
-$for(posts)$
-  <h2>$title$</h2>
-  <i>$date$ / $tags$</i>
-
-  $body$
-$endfor$
-
-$if(previousPageNum)$
-<a href="$previousPageUrl$">◀ Newer Entries</a>
-$endif$ &nbsp;
-$if(nextPageNum)$
-<a href="$nextPageUrl$">Older Entries ▶</a>
-$endif$&nbsp;
-
+        $tags$
+    </div>
 </div>
