--- a/templates/post-page.html
+++ b/templates/post-page.html
@@ -1,7 +1,10 @@
-<div id="header">
-    <a href="/">&#171; Home</a>
-</div>
+<!-- <div id="header">
+     <a href="/">&#171; Home</a>
+     </div> -->
 
-<div id="main">
+<section class="post">
+    <a href="/">&lt; Home</a>
     $body$
-</div>
+
+    <div class="post-comment-request">Please email me any comments!</div>
+</section>
