--- a/templates/default.html
+++ b/templates/default.html
@@ -10,6 +10,8 @@
 
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
+
+        <link rel="alternate" type="application/atom+xml" title="Atom feed for mvr" href="/atom.xml" />
     </head>
 
     <body>
