--- a/templates/post.html
+++ b/templates/post.html
@@ -1,5 +1,5 @@
 <h1 class="post-title"><a href="$url$">$title$</a></h1>
-<p class="post-deets">$date$ $if(tags)$ / $tags$ $endif$</p>
+<p class="post-deets">$date$ $if(written)$ / Written: $written$ $endif$ $if(tags)$ / $tags$ $endif$</p>
 <div class="post-content">
     $body$
 </div>
