Convert style to SCSS, fiddle

--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -18,10 +18,10 @@
 
 
 $if(nextPageNum)$
-<a id="next-page-link" href='$nextPageUrl$'>&lt; Older Entries</a>
+<a id="next-page-link" href='$nextPageUrl$'>◁ Older Entries</a>
 $endif$
 
 $if(previousPageNum)$
-<a id="prev-page-link" href='$previousPageUrl$'>Newer Entries &gt;</a>
+<a id="prev-page-link" href='$previousPageUrl$'>Newer Entries ▷</a>
 $endif$
 </section>
