--- a/templates/post-page.html
+++ b/templates/post-page.html
@@ -3,7 +3,7 @@
      </div> -->
 
 <section class="post">
-    <a href="/">&lt; Home</a>
+    <a href="/">◁ Home</a>
     $body$
 
     <div class="post-comment-request">Please email me any comments!</div>
