--- a/templates/post-page.html
+++ b/templates/post-page.html
@@ -6,5 +6,5 @@
     <a href="/">◁ Home</a>
     $body$
 
-    <div class="post-comment-request">Please email me any comments!</div>
+    <div class="post-comment-request">Please email me any comments or suggestions!</div>
 </section>
