--- a/css/syntax.scss
+++ b/css/syntax.scss
@@ -5,9 +5,9 @@ div.column{display: inline-block; vertical-align: top; width: 50%;}
 div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
 ul.task-list{list-style: none;}
 pre > code.sourceCode { white-space: pre; position: relative; }
-pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
+pre > code.sourceCode > span { display: inline-block; line-height: 1; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
-code.sourceCode > span { color: inherit; text-decoration: inherit; }
+// code.sourceCode > span { color: inherit; text-decoration: inherit; }
 div.sourceCode { margin: 1em 0; }
 pre.sourceCode { margin: 0; }
 @media screen {
@@ -32,36 +32,34 @@ pre.numberSource code > span > a:first-child::before
   color: #aaaaaa;
 }
 pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
-div.sourceCode
-{  background-color: #f8f8f8; }
 @media screen {
     pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
-code span.al { color: #ef2929; } /* Alert */
-code span.an { color: #8f5902; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #c4a000; } /* Attribute */
-code span.bn { color: #0000cf; } /* BaseN */
-code span.cf { color: #204a87; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4e9a06; } /* Char */
-code span.cn { color: #000000; } /* Constant */
-code span.co { color: #8f5902; font-style: italic; } /* Comment */
-code span.cv { color: #8f5902; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #8f5902; font-weight: bold; font-style: italic; } /* Documentation */
-code span.dt { color: #204a87; } /* DataType */
-code span.dv { color: #0000cf; } /* DecVal */
-code span.er { color: #a40000; font-weight: bold; } /* Error */
+code span.al { color: #d45b5b; } /* Alert */
+code span.an { color: $brown; font-weight: bold; font-style: italic; } /* Annotation */
+code span.at { color: #5e7a96; } /* Attribute */
+code span.bn { color: $blue; } /* BaseN */
+code span.cf { color: $darkblue; font-weight: bold; } /* ControlFlow */
+code span.ch { color: $green; } /* Char */
+code span.cn { color: $offblack; } /* Constant */
+code span.co { color: $brown; font-style: italic; } /* Comment - muted blue */
+code span.cv { color: $brown; font-weight: bold; font-style: italic; } /* CommentVar */
+code span.do { color: $brown; font-weight: bold; font-style: italic; } /* Documentation */
+code span.dt { color: $darkblue; } /* DataType */
+code span.dv { color: $blue; } /* DecVal */
+code span.er { color: #c15656; font-weight: bold; } /* Error */
 code span.ex { } /* Extension */
-code span.fl { color: #0000cf; } /* Float */
-code span.fu { color: #000000; } /* Function */
+code span.fl { color: $blue; } /* Float */
+code span.fu { color: $offblack; } /* Function */
 code span.im { } /* Import */
-code span.in { color: #8f5902; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #204a87; font-weight: bold; } /* Keyword */
-code span.op { color: #ce5c00; font-weight: bold; } /* Operator */
-code span.ot { color: #8f5902; } /* Other */
-code span.pp { color: #8f5902; font-style: italic; } /* Preprocessor */
-code span.sc { color: #000000; } /* SpecialChar */
-code span.ss { color: #4e9a06; } /* SpecialString */
-code span.st { color: #4e9a06; } /* String */
-code span.va { color: #000000; } /* Variable */
-code span.vs { color: #4e9a06; } /* VerbatimString */
-code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warning */
+code span.in { color: #6e8ea3; font-weight: bold; font-style: italic; } /* Information */
+code span.kw { color: $darkblue; font-weight: bold; } /* Keyword */
+code span.op { color: $brown; font-weight: bold; } /* Operator */
+code span.ot { color: $brown; } /* Other */
+code span.pp { color: $brown; font-style: italic; } /* Preprocessor */
+code span.sc { color: $offblack; } /* SpecialChar */
+code span.ss { color: $green; } /* SpecialString */
+code span.st { color: $green; } /* String */
+code span.va { color: $offblack; } /* Variable */
+code span.vs { color: $green; } /* VerbatimString */
+code span.wa { color: #6e8ea3; font-weight: bold; font-style: italic; } /* Warning */
