Style updates, add highlighting, tables, fix theorem environments

--- a/css/sidenote.scss
+++ b/css/sidenote.scss
@@ -9,6 +9,7 @@
   // font-size: 1.1rem;
   // line-height: 1.3;
   font-size: 80%;
+  font-style: normal;
   line-height: inherit;
   vertical-align: baseline;
   position: relative;
